--- a/main.tex
+++ b/main.tex
@@ -25,11 +25,15 @@
 \input{intro}
 \input{related_work}
 \input{prelims}
-\input{problem}	 
+\input{problem}	
+
 \input{theory}
+
 \input{experiments}
 
 \bibliographystyle{plain}
 \bibliography{references}
+
+\input{recycle_bin} 
 
 \end{document}
