--- a/preamble.tex
+++ b/preamble.tex
@@ -51,7 +51,7 @@
 \def\goal{\mathit{Goal}}
 \def\avoidl{\mathit{AvoidLoc}}
 \def\avoidg{\mathit{AvoidGlob}}
-\def\init{\mathit{Init}}
+\def\init{\mathsf{in}}
 \def\track{\mathit{track}}
 \def\proj{\mathbf{proj}}
 
