--- a/problem.tex
+++ b/problem.tex
@@ -2,155 +2,18 @@
 
 \section{The Problem Statement}
 %\textcolor{blue}{
-In this paper, we consider the planning problem for a heterogeneous swarm of $N$ robots under the presence of external disturbances and model uncertainties. 
-The robots' nominal dynamics can be non-linear and there can be bounded noise in the model, capturing the effect of the disturbances and model uncertainties.
-We further assume that the robots are incapable of synchronizing their actions through communication among each other during run-time.
-We want to synthesize individual feedback controllers for every robot so that the following conditions are fulfilled:
+In this paper, we consider the feedback controller synthesis problem for a heterogeneous swarm of $N$ different robots, given as $N$ different control systems with the same output space.
+The robots are modeled as nonlinear control systems subjected to disturbances.
+We assume that the robots are incapable of synchronizing their actions through communication among each other during run-time.
+We want to synthesize \emph{local} feedback controllers for each robot so that a global reach-avoid specification, defined on the state space of the product control system, is fulfilled.
+Concretely, we want to develop an algorithm with the following input and output:
 \begin{description}
-	\item[Reachability:] Every robot, when positioned at a designated initial state, should eventually reach a designated target state.
-	\item[Obstacle avoidance:] No robot should collide with the given obstacles.
-	\item[Collision avoidance:] No two robots should ever collide against each other.
-\end{description}
-For the sake of simplicity, at the controller synthesis stage, we ignore the geometry of the robots and model them as point objects.
-Then the collision avoidance requirement is formalized by requiring the point objects to maintain certain minimum safe distance, where the safe distance takes into account the dimension of the respective robots.
-
-%\textcolor{blue}{%We consider planning problem for multi-robot systems modelled collectively as control system $\Sigma$ with order $n=\sum_{i=1}^N n_i$. Each of $N$ robots can be represented as a control system of order $n_i$ 
-We fomalize the problem statement in the following.
-We start with the following six ingredients that are required to be provided as inputs:
-\begin{description}
-	\item[System model:] We assume that there are $N$ robots, indexed by the natural numbers $[1;N]$.
-	Every robot $i\in [1;N]$ is modeled as a control system $\Sigma^i = (X^i, U^i, W^i, f^i, Y, h^i)$ with $X^i\subseteq \mathbb{R}^{n_i}$, $U^i\subseteq \mathbb{R}^{m_i}$, $W^i\subset \mathbb{R}^{n_i}$, and $Y\subseteq \mathbb{R}^p$.
-	We highlight that all the robots are assumed to have the same output space.
-	\item[Sampling time:] A sampling time $\tau\in \mathbb{R}_{>0}$.
-	\item[Initial states:] Every robot has a designated initial state $\init^i\in X^i$ for $i\in [1;N]$.
-	\item[Target states:] Every robot has a designated set of goal states $\goal^i\subseteq X^i$  for $i\in [1;N]$.
-	\item[Static obstacles:] There is a static obstacles, common for all the robots: $\obs\subseteq Y$.
-	\item[Safety margin:] There is a safety margin $\delta\in \mathbb{R}^p_{\geq 0}$ which denotes the required minimum safe distance from every other robot and the static obstacle.
-	%\item[Safety margins:] There are two safety margins: (i) A \emph{collision avoidance margin} $\delta_{\col}\in \mathbb{R}^{p}_{>0}$, which denotes the required minimum distance between every two robots---measured in the output space, and (ii) a set of \emph{obstacle avoidance margins} $\set{\delta_{\obs,i}}_{i\in [1;N]}$, with $\delta_{\obs,i}\in \mathbb{R}^{n_i}_{>0}$ for all $i$, which denote the required minimum distance between every robot and the static obstacles in its state space.
+	\item[Inputs:] A set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i,Y,h^i)$, a sampling time $\tau >0$, and a reach avoid specification $\Phi=\lnot\avoid\;\mathcal{U}\;\goal$ for some $\avoid\subseteq X^\times$ and $\goal\subseteq X^\times$, where $X^\times$ is the state space of the product control system of $\set{\Sigma^i}_{i\in [1;N]}$.
+	\item[Output:] A set of local feedback controllers $\set{C^i}_{i\in [1;N]}$ of $\set{\Sigma^i_\tau}_{i\in [1;N]}$ so that $\set{C^i}_{i\in [1;N]}\parallel \set{\Sigma_\tau^i}_{i\in [1;N]}$ realizes $\Phi$. 
 \end{description}
 
-A set of feedback controllers $\set{C^i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ \emph{realizes} the given specification $(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \set{\delta_{\obs,i}}_{i\in [1;N]})$, as defined above, if the following conditions are satisfied:
-For \emph{every} $i\in [1;N]$ and for \emph{every} infinite behavior $(x_0^i,x_1^i,\ldots)\in \Beh^\cl(x_0^i)$ of the closed loop $C^i\parallel \Sigma_\tau^i$ starting at $x_0^i=\init^i$, there \emph{exists} a $K$ such that
-\begin{description}
-	\item[Reachability:] $x_K^i\in \goal^i$.
-	\item[Obstacle avoidance:] For every $k\leq K$, we have $d^{p}(h^i(x_k^i),\obs) > \delta$.
-	\item[Collision avoidance:] 
-		Suppose $j\in [1;N]$ with $j\neq i$ be some other robot.
-		Consider any arbitrary infinite behavior $(x_o^j, x_1^j,\ldots)\in \Beh^\cl(x_0^j)$ of $C^j\parallel \Sigma_\tau^j$ starting at $x_0^j=\init^j$. 
-		Then for every $k\leq K$ we require the following to be satisfied: $d^{p}(h^i(x^i_k),h^j(x^j_k))>\delta$.
-\end{description}
-
-\begin{comment} % Mahmoud's version
-\KM{I am not sure if the highlighted text below is used anywhere so far.}
-\new{
-We define the \emph{product control system} $\Sigma = (X, U, W, f)$ wherein $X=X^1\times X^2\times\dots\times X^N=\reals^n$, $U=U^1\times\dots\times U^N\subset \reals^m$, $W=W^1\times\dots\times W^N\subset \reals^n$ and $f=f^{1}\oplus \ldots\oplus f^{N}$. 
-Intuitively, the product control system models the joint behavior of the robotic swarm.
-}
-We consider a setting wherein each individual robot starts from a (known) initial state $x_0^i\in X^i$ and is asked to go into a \emph{neighborhood} of its corresponding goal state $x_G^i\in X^i$ under the presence of non-zero disturbance. Concatenated initial and goal states of the collective swarm robot system are denoted by $x_0=\begin{bmatrix}{x_0^{1^T},\ldots,x_0^{N^T}}\end{bmatrix}$ and $x_G=\begin{bmatrix}{x_G^{1^T},\ldots,x_G^{N^T}}\end{bmatrix}$.
-We denote by $\obs$ the set of polytopic (static) obstacles scattered in $\reals^2$ and by $\reach\subset X$ for the targetted neighborhood of the collective system.%}
-
-%We consider a setting wherein each individual robot starts from a (known) initial state $x_0^i$ and is asked to go into a \emph{neighborhood} of its corresponding goal state $x_G^i$. We denote by $\obs$ the set of polytopic (static) obstacles scattered in $\reals^2$. %For a given control system $\widetilde\Sigma$, the targetted problem is denoted by a tuple $(\reach,obs,x_0)$, where $x_0\in X$ is a designated initial state, and $\reach$ and $obs$ are subsets of the state spaces $X$.
- %Any collision avoidance scheme ensures that minimum distance between robots is always greater than By (static) obstacle $\avoid$ is selected so that it consists a neighbour
-For a given sampling time $\tau>0$ and positive constants $\delta_{\col}$ and $\delta_{\obs}$, a feedback controller $C$ \emph{realizes} the desired specification on $\Sigma_\tau$ if the closed-loop behavior $\Beh^\cl(x_0)$ of $C\parallel\Sigma_\tau$ satisfies the following condition: For \emph{every} infinite sequence $(x_0,x_1,\ldots)$ in $\Beh^\cl(x_0)$,
-\begin{itemize}
- \item there \emph{exists} a $K$ s.t.\ $x_K\in \reach$ 
- 
- \item for \emph{every} $k\leq K$ and every $1\leq i,j \leq N$ we have $d(x^i_k,x^j_k)>\delta_{\col}$ for $i\neq j$, and
- 
- \item for \emph{every} $k\leq K$ and every $1\leq i\le N$ we have $D(x^i_k,obs)>\delta_{\obs}$.
- 
- \end{itemize}
- %We denote by $\avoid$ the subset of state-time space at which the second condition above does not hold.
- For a given control system $\Sigma$, the targetted problem is denoted by a tuple $(x_0, \reach,\obs, \delta_{\obs},\delta_{\col})$. In linear temporal logic (LTL) notation \cite{baier2008principles}, the above conditions can be succinctly written as:
-\begin{equation}\label{eq:spec}
-	x_0 \wedge ([\bigwedge_{1\leq i\leq N}D(x^i,\obs)>\delta_{obs}\; \bigwedge_{1\leq i,j\leq N\;i\neq j}  d(x^i,x^j)>\delta_{\col}]\; \mathcal{U}\;\reach) .
-\end{equation}
-\end{comment}
-
-\begin{problem}\label{prob:reach-avoid}
-	Given a set of control systems $\set{\Sigma^i}_{i\in [1;N]}$, a sampling time $\tau\in \mathbb{R}_{>0}$, and a specification $\Phi=(\set{\init^i}_{i\in [1;N]}, \set{\goal^i}_{i\in [1;N]}, \set{\obs^i}_{i\in [1;N]}, \delta_\col, \set{\delta_{\obs,i}}_{i\in [1;N]})$, find a set of feedback controllers $\set{C_i}_{i\in [1;N]}$ for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$ which realizes $\Phi$.
-\end{problem}
-
-%\KM{An weird thing I noted is that the systems cannot violate their "local" obstacle avoidance specification until all the systems have reached their targets. This is stronger than a simple "until" type local specification for each robot, where it is required that the obstacles are not hit before reaching the target for the first time. This is just an observation: nothing breaks.} \MZ{"This point is needed to be discussed"}
-
-We categorize the available controller synthesis techniques from the existing literature into two broad groups, namely the $\mathit{fast}$ ones and the $\mathit{sound}$ ones.
-The $\mathit{fast}$ ones are those which are extremely efficient, but do not provide formal worst-case robustness guarantee of the controller against external disturbances \cite{howell2019altro,choset2005principles}.
-The $\mathit{sound}$ ones are those which are not so efficient, but provide strong formal guarantee on the correctness of the controller \cite{reissig2016feedback,fisac2015reach,tedrake2009lqr}.
-%In Sec.~\ref{sec:nominal trajectory} and Sec.~\ref{sec:tracking}, we propose a hierarchical solution approach for Prob.~\ref{prob:reach-avoid} that marries the $\mathit{fast}$ and the $\mathit{sound}$ solution techniques.
-
-We propose a hierarchical solution approach for Prob.~\ref{prob:reach-avoid} that marries the $\mathit{fast}$ and the $\mathit{sound}$ solution techniques.
-Our approach is a two-stage procedure: 
-\begin{itemize}
-	\item First, we deploy an off-the-shelf $\mathit{fast}$ method to quickly solve the controller synthesis problem, and obtain a set of  \emph{valid} (controlled) \emph{nominal trajectories} $\set{(x_{0_\nom}^i,\ldots,x_{K_\nom}^i)}_{i\in [1;N]}$, for the systems $\set{\Sigma_\tau^i}_{i\in [1;N]}$, such that the following conditions are met:
-	\begin{itemize}
-		\item For every $i\in [1;N]$, there exists $k\in [0;K]$, such that $x_{k_\nom}^i\in \goal^i$,
-		\item for every $i\in [1;N]$ and for every $k\in [0;K]$, $d^{p}(h^i(x_{k_\nom}^i),\obs) > \delta$, and
-		\item for every $(i,j)\in [1;N]\times [1;N]$ and for every $k\in [0;K]$, $d^{p}(h^i(x_{k_\nom}^i), h^j(x_{k_\nom}^j)) > \delta$. 
-	\end{itemize}
-	(Essentially, a set of valid nominal trajectories is a witness trajectory for the satisfaction of the specification.)
-	While, in principle, any $\mathit{fast}$ method could be used for this first phase, in this work we solve the given problem \emph{centrally} using the tool called ALTRO \cite{howell2019altro}.
-	\item Second, for every $\Sigma^i_\tau$, for $i\in [1;N]$, we use a $\mathit{sound}$ method to compute a sound feedback controller which \emph{tracks} the respective nominal trajectory of system $\Sigma^i_\tau$ up to a given precision.
-This tracking problem is formalized as a separate problem in the following:
-		\begin{problem}\label{prob:tracking_with_time}
-			Let $\Sigma=(X,U,W,f,Y,h)$ be a control system, $\tau>0$ be a sampling time, $\goal\subseteq X$ be a designated target set, $(x_{0_\nom},\ldots,x_{K_\nom})$ be a given finite nominal trajectory, and $\varepsilon\in \mathbb{R}^{n}_{>0}$ be a precision parameter chosen in such a way that there exists a state $g\in \goal$ such that the following holds:
-			\begin{equation}\label{eq:choice of eps}
-				\varepsilon \leq d^n(g, X\setminus \goal). 
-			\end{equation}
-			Find a feedback controller $C$ for $\Sigma_\tau$ such that 
-			% for every initial state $x_0\in X$ with $\| x_0-x_0^\nom \|\leq \varepsilon$, and 
-			for every finite trajectory $(x_{0_\nom},x_1,\ldots,x_K)$ in the closed-loop behavior $\Beh^\cl(x_{0_\nom})$ of $C \parallel \Sigma_\tau$, for every $0\leq k \leq K$, $d^n(x_k, x_{k_\nom}) \leq \varepsilon$.
-			We call such a controller $C$ a \emph{tracking} controller.
-		\end{problem}
-\end{itemize}
-
-The inequality \eqref{eq:choice of eps} guarantees the existence of a goal state whose entire $\varepsilon$-neighborhood is included in the set $\goal$.
-This ensures that the original reachability specification can be satisfied just using the tracking controller.
-%\MZ{with current implementation that domain includes all of the points in target set it shouldn't be a problem  }
-%\KM{Please check! Not sure.}
-
-It is worthwhile to mention that the controllers synthesized in the first phase, using $\mathit{fast}$ methods, are not directly used by the second phase; rather only the nominal trajectories are used.
-Then one could argue that, instead of using a fast \emph{controller synthesis} method to generate nominal trajectories, one could simply employ fast \emph{planners} \cite{rrt etc.} to generate geometric plans.
-However, since geometric planners do not take into consideration the dynamics and control constraints, so, in our experience, the generated plans (i.e.\ the nominal trajectories) are often doomed to be untrackable for general systems (i.e. non-flat systems ).%certain class of systems.
-
-\KM{Can we give the example of the two dimensional pendulum, that we once had to show this phenomenon?}
-
-The two solution stages are presented in Sec.~\ref{sec:nominal trajectory} and Sec.~\ref{sec:tracking} respectively.
-
-
-%\begin{problem}\label{prob:tracking}
-%	Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $(x_0^\nom,\ldots,x_K^\nom)$ be a given finite nominal trajectory, and $\varepsilon>0$ be a given precision parameter.
-%	Find a feedback controller $C$ for $\Sigma_\tau$ s.t.\ 
-%	% for every initial state $x_0\in X$ with $\| x_0-x_0^\nom \|\leq \varepsilon$, and 
-%	for every infinite trajectory $(x_0^\nom,x_1,\ldots)$ in the closed-loop behavior $\Beh^\cl(x_0^\nom)$ of $C \parallel \Sigma_\tau$, the following are satisfied:
-%	\begin{enumerate}
-%		\item there exists a $k^\ast>0$, s.t.\ $\| x_{k^\ast}-x_K^\nom \|\leq \varepsilon$, and
-%		\item for every $0<k < k^\ast$, there exists a $j\geq0$, s.t.\ $\| x_k-x_j^\nom \| \leq \varepsilon$.
-%	\end{enumerate} 
-%\end{problem}
-
-%\textcolor{red}{
-
-
-
-
-%Difference of Problem 2 and Problem 3 is lied on time. In problem 3 trajectory generated by controller (for fixed starting point as a initial point of nominal trajectory ) with a any bounded disturbance less than $w$ at each time step will be close to nominal trajectory but in Problem 2 the trajectory produced by controller (with same initial state) just follow the path of nominal trajectory. It means that, controller of problem 2 can bring the trajectory to target faster or slower than nominal trajectory. For example with controller of problem 3, 10th point of every finite trajectory generated by controller(with same initial point) will be in close to exactly 10th point of nominal trajectory but controller of problem 2 lead trajectory to a region as long as there exist a close point in trajectory  
-%}
-
-%First, we simply ignore the external disturbance (i.e.\ set $W=\set{0}$).
-%This enables us to use one of the $\mathit{fast}$ methods to quickly compute an initial controller candidate $C^\nom$.
-%Note that $C^\nom$ might not be able to realize the specification on the actual system $\Sigma_\tau$ due to the external disturbance $W$.
-% for the given specification by assuming that the disturbance set $W=\set{0}$.
-%
-%
-%First, we ignore the disturbance from the system and consider the nominal system model $\Sigma^\nom=(X,U,\set{0},f)$.
-%We use a $\mathit{fast}$ technique to quickly find a nominal controller $C^\nom$ for $\Sigma^\nom_\tau$.
-%The resulting closed-loop 
-%We expect that $C^\nom$ will work correctly for $\Sigma_\tau$ when there is no external disturbance, and might fail when there is a non-zero external disturbance.
-%This leads us to the second stage where we use a $\mathit{sound}$ method to build the desired sound controller by locally ``robustifying'' $C^\nom$ against external disturbances.
-%Performing this second stage is the main contribution of this paper, and is formally stated in the following:
-%
-%\begin{problem}
-%	Let $\Sigma=(X,U,W,f)$ be a control system, $\tau>0$ be a sampling time, $\Phi:=(\reach,\avoid,x_0)$ be a reach-avoid control specification, $C^\nom:X\rightarrow U$ be a given nominal controller that realizes $\Phi$ on the sampled-time abstraction $\Sigma^\nom_\tau$ of the nominal system $\Sigma^\nom=(X,U,\set{0},f)$, and $\varepsilon>0$ be a precision parameter.
-%	Suppose $(x_0,x_1^n,x_2^n,\ldots)$ be the unique trajectory generated by the nominal closed loop $\Sigma^\nom_\tau\parallel C^\nom$.
-%	Find a controller $C$ for $\Sigma$ s.t.\ for every sequence $(x_0,x_1,\ldots)$ that is in the closed-loop behavior $\mathcal{B}(x_0)$ of $\Sigma_\tau\parallel C$ and for every $i > 0$, there exists a $j>0$, s.t.\ $\| x_i-x_j^n \| \leq \varepsilon$.
-%\end{problem}
+Our choice of the specification $\Phi$ on the product state space $X^\times$ subsumes many interesting class of control tasks.
+For example, we can express situations when the robots have their own private reach-avoid specifications, and they need to avoid collision among each other; we consider such specification in some of our examples in Sec.~\ref{}.
+In addition, we can now also specify more general type of tasks which cannot be easily decomposed into individual subtasks for the robots.
+One example is the formation control problem, which we consider in the example in Sec.~\ref{}, where a set of robots need to reach some location while maintaining a given geometric formation:
+Since this task is defined on the relative positions of the robots, hence we cannot decompose it into separate reach-avoid subtasks.
